# seek-backend-test

./: .env.test  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/db/: mongo.py
app/migrations/: seed.py
app/models/: book.py  user.py
app/repositories/: book_mongo.py  selectors.py  user_mongo.py
app/routers/: auth.py  books.py
app/schemas/: book.py
postman/: Books_API_Collection.postman_collection.json
tests/: conftest.py  test_repository.py  test_security.py
