[project]
name = "seek-backend-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.8",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pymongo>=4.16.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
